maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:9: error: ':' expected but ')' found.
def isDirectionFree(direction) : Boolean = {
                             ^PledgeMaze:62: error: identifier expected but '}' found.
}
^